rootfs/etc/ip6tables.up.rules
# Generated by ip6tables-save v1.6.0 on Sun Nov 19 21:49:39 2017
*nat
:PREROUTING ACCEPT [4:548]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o wan -j MASQUERADE
COMMIT
# Completed on Sun Nov 19 21:49:39 2017
# Generated by ip6tables-save v1.6.0 on Sun Nov 19 21:49:39 2017
*mangle
:PREROUTING ACCEPT [27:2230]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Sun Nov 19 21:49:39 2017
# Generated by ip6tables-save v1.6.0 on Sun Nov 19 21:49:39 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [43:3554]
-A INPUT -i lo -j ACCEPT
-A INPUT -i br0 -j ACCEPT
-A INPUT -i wan -p ipv6-icmp -j ACCEPT
-A INPUT -i wan -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i wan -p udp -m state --state NEW -m udp --dport 546 -j ACCEPT
-A FORWARD -i br0 -j ACCEPT
-A FORWARD -i wan -j ACCEPT
COMMIT
# Completed on Sun Nov 19 21:49:39 2017
